@@ -1,0 +1,30 @@
+<driver id="driver/lbp800">
+ <name>lbp800</name>
+ <url>http://www.veneto.com/lbp800/lbp800.html</url>
+ <execution>
+  <filter />
+  <prototype></prototype>
+ </execution>
+ <comments>
+  <en>
+
+    Driver for the Canon LBP-800 laser winprinter.&lt;p&gt;
+
+    In contrary to the "lbp660" driver parallel port access goes
+    through the kernel. So the driver does not need to run SUID
+    root. The access is done via the "parport_pc" kernel module and a
+    CUPS backend which comes with the driver. The driver does not work
+    with USB- or network-connected printers.&lt;p&gt;
+
+    The Foomatic PPD file for this driver is not available on
+    OpenPrinting because it is already contained in the driver
+    package.&lt;p&gt;
+
+  </en>
+ </comments>
+ <printers>
+  <printer>
+   <id>printer/Canon-LBP-800</id>
+  </printer>
+ </printers>
+</driver>
