@@ -15,22 +15,35 @@
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
-  <url>http://www.canon.co.uk/cgi-bin/parser.pl?page=products&amp;product=486&amp;prodtype=9&amp;subprodtype=36&amp;range=</url>
+  <url></url>
   <lang>
     <proprietary/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
   <!--no known parport probe information--></autodetect>
-  <functionality>F</functionality><!--unknown preferred "driver"-->
+  <functionality>B</functionality>
+  <driver>lbp800</driver>
   <!--not "unverified"--><!--no "contrib_url"-->
   <comments>
-    <en>A real &quot;winprinter&quot; as the LBP-660, LBP-600, and LBP-460. If there is a PCL
-emulation, it is done by the Windows driver. Reported not to work at all with
-free software by several people. On the &lt;a
-href=&quot;http://www.canon.co.uk/cgi-bin/parser.pl?page=products&amp;index=2&amp;product=486&quot;&gt;technical
-specifications
-page&lt;/a&gt; Canon writes that a &quot;Bi-directional Parallel port&quot; is needed to connect
-this printer. So making it working with the usual printer spoolers is probably
-very difficult.</en>
+    <en>
+
+    A real &quot;winprinter&quot; as the LBP-660, LBP-600, and
+    LBP-460.&lt;p&gt;
+
+    Works with the free driver "lbp800" which is based on
+    reverse-engineering the undocumented proprietary protocol. The
+    driver works only for a parallel port connection, not for
+    USB.&lt;p&gt;
+
+    Note that the proprietary parallel port data transfer protocol is
+    non-standard and not very reliable. So use a cable as short as
+    possible to use this printer. The parallel port must be set to
+    bi-directional in the BIOS (should be already set on modern
+    PCs).&lt;p&gt;
+
+    If there is a PCL emulation, it is done by the Windows
+    driver.&lt;p&gt;
+
+    </en>
   </comments>
 </printer>
