@@ -1,5 +1,8 @@
 2008-11-30  Till Kamppeter <till.kamppeter@gmail.com>
 
+	* driver/lbp800.xml, printer/Canon-LBP-800.xml: Added "lbp880"
+	  driver and updated rating and text for the Canon LBP-800.
+
 	* driver/splix2.xml: Updated SVN revision number in the release
 	  note to 254.
 
